# LAN-Games-Deployer

./: .gitignore  CHANGELOG.md  LANGamesDeployer.spec  README.md  RELEASE_NOTES_v1.0.md  RELEASE_NOTES_v1.1.md  version_info.txt  vs2019_xp_config.json
assets/games/: asset_report.json
cpp/: CMakeLists.txt  README.md
cpp/build-vs2/: CMakeCache.txt.tmp0fec1
cpp/build-vs2019-xp32/: CMakeCache.txt
cpp/build-xp32/: CMakeCache.txt
cpp/cmake/: package_release.cmake
cpp/installer/: LANGamesDeployer_xp.iss  LANGamesDeployer_xp.nsi  build_installer.ps1  build_installer_nsis.ps1
cpp/release/LAN Games Deployer v1.0/data/: config.ini
cpp/src/: app.rc  main.cpp  resource.h  resource_ids.h
release_artifacts/v1.2/: CHANGELOG.md  HASHES.txt  README_GITHUB.md  RELEASE_NOTES_v1.2.md
release_artifacts/v1.2/LAN Games Deployer v1.2/data/: config.ini
scripts/: prepare_github_publish.ps1
src/: main.py
